# dots

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  README.es.md  README.md  go.mod  go.sum  implementation-plan.md  install.sh  pending.md  pyproject.toml  repro_link.py
.debug_tui/: variant_swap_diagnosis.md
.github/workflows/: release.yml
cmd/dots/: main.go
docs/: adopt.md  dependencies.md  lua-syntax.md  path-yaml-reference.md  schema-v3.md  sintaxis-lua.md  variants.md
docs/release-notes/: v0.10.0.md  v0.11.0.md  v0.7.5.md  v0.9.0.md  v0.9.1.md
internal/checker/: checker.go  checker_test.go
internal/cli/: adopt.go  backup.go  completion.go  doctor.go  edit.go  init.go  install.go  install_test.go  link.go  list.go  migrate.go  migrate_test.go  plan.go  root.go  status.go  unlink.go  updates.go
internal/config/: config.go  config_test.go
internal/lua/: api_deps.go  api_files.go  e2e_test.go  loader.go  loader_modules.go  loader_modules_test.go  loader_test.go  migrate.go  migrate_test.go  types.go  vm.go  vm_test.go
internal/plan/: plan.go  plan_test.go
internal/plugins/: managers.go
internal/resolver/: resolver.go  resolver_test.go  service.go
internal/system/: system.go  system_test.go
internal/template/: template.go  template_test.go
internal/transaction/: transaction.go  (+1 more)
tests/: test_config.py  test_install.py  test_link.py  test_list_cmd.py  test_migrate.py  test_module_filter.py  test_module_writer.py  test_resolver.py  test_status_format.py  test_template.py  test_transaction.py  test_updates.py  test_yaml_parser.py
(+44 files in other folders)
